Alterações na tela da notícias

--- a/Codigo/login.html
+++ b/Codigo/login.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie-edge">
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
-    <script type="text/javascript" src="database.js"></script>
     <script src="https://kit.fontawesome.com/0924d110a0.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
@@ -44,7 +43,7 @@
                 </a> </div>
         </div>
     </form>
-
+    <script type="text/javascript" src="./js/database.js"></script>
 </body>
 
 </html>
