--- a/Codigo/main.html
+++ b/Codigo/main.html
@@ -18,7 +18,7 @@
             <div class="bg-navbar p-4">
               <div class="header-navbar">
                   <i class="fas fa-user-md logo-navbar"></i>
-                  <h5 class="text-white h1">Glicetec</h5>
+                  <h2 class="text-white">Glicetec</h2>
               </div>
               <hr>
               <ul>
@@ -65,7 +65,7 @@
     <section class="medicao">
         <div id="containerId" class="container">
             <div class="header">
-                <h5 class="title" id="name-label">Adicione abaixo sua glicemia</h5>
+                <h5 id="name-label">Adicione abaixo sua glicemia</h5>
             </div>
             <div class="content">
                 <input type="text" required placeholder="Coloque sua glicemia (dl/mg)" id="taskInput" class="task-input"
@@ -74,12 +74,11 @@
                 <button class="btn_acessar" id="buttonAdd" type="submit">Adicionar</button>
                 <ul class="task-list" id="taskList"></ul>
                 <div class="the-two-buttons">
-                    <button class="delete-all">Deletar medições</button>
+                    <button class="delete-all">Deletar medição</button>
                     <button class="button-check-all" id="buttonCheckAll" type="submit">Marcar todas</button>
                 </div>
             </div>
         </div>
-    
     </section>
     
     <script src="js/script.js"></script>
