--- a/Codigo/cadastro.html
+++ b/Codigo/cadastro.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie-edge">
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
-    <script type="text/javascript" src="database.js"></script>
     <script src="https://kit.fontawesome.com/0924d110a0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/style.css">
     <title>Cadastro</title>
@@ -56,6 +55,7 @@
     </form>
     </div>
 </div>
+<script type="text/javascript" src="./js/database.js"></script>
 </body>
 
 </html>
