Ajustes finais Sprint 2

--- a/Codigo/login.html
+++ b/Codigo/login.html
@@ -29,18 +29,19 @@
                 <input class="input-login" type="password" name="Senha" placeholder="Senha" required>
             </div>
             <div class="card-group link-checkbox">
-                <a href="esqueci.html">
+                <a class="esqueci" href="esqueci.html">
                     <p>Esqueci a senha</p>
                 </a>
                 <label> <input type="checkbox" name="lembrar">Manter conectado</label>
             </div>
             <div class="card-group button">
-                <a href="main.html"><button class="btn_acessar" type="submit">Acessar</button>
-            <\a></div>
+                <a href="main.html"><button class="btn_acessar" type="submit">Acessar</button></a>
+            </div>
             <div class="card-group button">
                 <label>Novo usuário: </label>
                 <a href="cadastro.html"><button type="button">Cadastre-se</button>
-                </a> </div>
+                </a>
+            </div>
         </div>
     </form>
     <script type="text/javascript" src="./js/database.js"></script>
