Update login and cadastro

--- a/Codigo/login.html
+++ b/Codigo/login.html
@@ -24,10 +24,10 @@
                 <h2>Seu assistente médico pessoal</h2>
             </div>
             <div class="card-group">
-                <input class="input-login" type="email" name="Usuario" placeholder="E-mail" required>
+                <input class="input-login" type="email" name="Usuario" placeholder="E-mail">
             </div>
             <div class="card-group">
-                <input class="input-login" type="password" name="Senha" placeholder="Senha" required>
+                <input class="input-login" type="password" name="Senha" placeholder="Senha">
             </div>
             <div class="card-group link-checkbox">
                 <a class="esqueci" href="esqueci.html">
