--- a/Codigo/cadastro.html
+++ b/Codigo/cadastro.html
@@ -35,17 +35,37 @@
             <input class="input-login" type="password" placeholder="Senha" required>
         </div>
         <div class="card-group">
-            <input class="input-login" type="text " placeholder="Tipo de Diabetes" required>
+            <select name="Tipo de Diabetes" id="tipo-diabetes" class="input-tipo" required>
+                <option value="default" class="nome-tipo" disabled selected>Tipo de Diabetes</option>
+                <option value="1">Diabete Tipo 1</option>
+                <option value="2">Diabete Tipo 2</option>
+                <option value="G">Diabete Gestacional</option>
+                <option value="P">Pré-diabetes</option>
+            </select>
         </div>
         <div class="card-group">
-            <input class="input-login" type="text" placeholder="Frequência de medições" required>
+            <select name="Tipo de Diabetes" id="frequencia" class="input-tipo" required>
+                <option value="default" class="nome-tipo" disabled selected>Frequência de medições</option>
+                <option value="6d">6x por dia</option>
+                <option value="5d">5x por dia</option>
+                <option value="4d">4x por dia</option>
+                <option value="3d">3x por dia</option>
+                <option value="2d">2x por dia</option>
+                <option value="1d">1x por dia</option>
+                <option value="6s">6x na semana</option>
+                <option value="5s">5x na semana</option>
+                <option value="4s">4x na semana</option>
+                <option value="3s">3x na semana</option>
+                <option value="2s">2x na semana</option>
+                <option value="2s">1x na semana</option>
+            </select>
         </div>
         <div class="card-group ">
             <input class="input-login" type="number" placeholder="Idade" required>
         </div>
         <div class="card--group"><label><input type="checkbox">Manter conectado</label></div>
         <div class="card-group button">
-            <button class="btn_acessar">Pronto</button>
+            <button onclick="" class="btn_acessar">Pronto</button>
         </div>
         <div class="login">
             <p>Para usuários antigos:</p>
