Update cadastro and login

--- a/Codigo/login.html
+++ b/Codigo/login.html
@@ -24,10 +24,10 @@
                 <h2>Seu assistente médico pessoal</h2>
             </div>
             <div class="card-group">
-                <input class="input-login" type="email" name="Usuario" placeholder="E-mail">
+                <input class="input-login" type="email" name="Usuario" placeholder="E-mail" required>
             </div>
             <div class="card-group">
-                <input class="input-login" type="password" name="Senha" placeholder="Senha">
+                <input class="input-login" type="password" name="Senha" placeholder="Senha" required>
             </div>
             <div class="card-group link-checkbox">
                 <a class="esqueci" href="esqueci.html">
@@ -36,7 +36,9 @@
                 <label> <input type="checkbox" name="lembrar">Manter conectado</label>
             </div>
             <div class="card-group button">
-                <a href="main.html"><button class="btn_acessar" type="submit">Acessar</button></a>
+                <a href="main.html">
+                    <button class="btn_acessar">Acessar</button>
+                </a>
             </div>
             <div class="card-group button">
                 <label>Novo usuário: </label>
