--- a/Codigo/cadastro.html
+++ b/Codigo/cadastro.html
@@ -22,8 +22,12 @@
             <h3 class=" Title ">Cadastre-se</h3>
         </div>
         <div class="social-media">
-            <a href="https://accounts.google.com/signin/v2/identifier?hl=pt-br&flowName=GlifWebSignIn&flowEntry=ServiceLogin "><i class="fab fa-facebook"></i></a>
-            <a href="#"><i class="fab fa-google-plus"></i></a>
+            <a href="#">
+                <i class="fab fa-facebook"></i>
+            </a>
+            <a href="https://accounts.google.com/signin/v2/identifier?hl=pt-br&flowName=GlifWebSignIn&flowEntry=ServiceLogin">
+                <i class="fab fa-google-plus"></i>
+            </a>
         </div>
         <div class="card-group">
             <input class="input-login" type="text" placeholder="Nome" required>
