--- a/Codigo/news.html
+++ b/Codigo/news.html
@@ -9,7 +9,8 @@
     <script src="https://kit.fontawesome.com/0924d110a0.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./js/database.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style1.css">
+    <link rel="stylesheet" href="./css/style2.css">
     <title>Links úteis</title>
 </head>
 
@@ -66,14 +67,14 @@
     </section>
     <section>
         <article id="Receitas">
-            <h3 class="title">Receitas</h3>
+            <h3 class="title"><a href="https://www.diabetes.org.br/publico/receitas">Receitas</a></h3>
             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img class="img-receita" src="Figuras/festa-junina-curau.jpg" alt="Curau">
                         <div class="carousel-caption d-none d-md-block">
                             <h2 class="receita">
-                                Receita Curau
+                                <a href="https://pilotandofogao.com.br/curau-para-diabeticos/">Receita Curau</a>
                             </h2>
                         </div>
                     </div>
@@ -81,7 +82,7 @@
                         <img class="img-receita" src="Figuras/festa-junina-pacoca.jpg" alt="Paçoca">
                         <div class="carousel-caption d-none d-md-block">
                             <h3 class="receita">
-                                Receita Paçoca
+                                <a href="http://martasdiet.com.br/pacoca-diet-martas-diet/">Receita Paçoca</a>
                             </h3>
                         </div>
                     </div>
@@ -89,14 +90,14 @@
                         <img class="img-receita" src="Figuras/pudim.jpg" alt="Pudim de queijo">
                         <div class="carousel-caption d-none d-md-block">
                             <h4 class="receita">
-                                Receita pudim de queijo</h4>
+                                <a href="https://pilotandofogao.com.br/pudim-de-queijo-para-diabeticos/">Receita pudim de queijo</h4></a>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img class="img-receita" src="Figuras/festa-junina-quentao.jpg" alt="Quentao">
                         <div class="carousel-caption d-none d-md-block">
                             <h5 class="receita">
-                                Receita Quentao de frutas</h5>
+                                <a href="https://www.diabetes.org.br/publico/receitas-diabetes/159-receitas-de-festa-junina/1319-quentao-de-frutas">Receita Quentao de frutas</h5></a>
                         </div>
                     </div>
                 </div>
