--- a/Codigo/main.html
+++ b/Codigo/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -27,7 +27,7 @@
                     <a href="perfil.html">
                         <li>Perfil</li>
                     </a>
-                    <a href="medicoes.html">
+                    <a href="main.html">
                         <li>Medições</li>
                     </a>
                     <a href="calendario.html">
