Update login to index

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <script src="https://kit.fontawesome.com/0924d110a0.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css">
-    <script type="text/javascript" src="./js/database.js"></script>
+    <link rel="stylesheet" href="./Codigo/css/style.css">
+    <script type="text/javascript" src="./Codigo/js/database.js"></script>
     <title>Login</title>
 </head>
 
