--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
             <div class="card-group button">
                 <label>Novo usuário: </label>
-                <a href="cadastro.html"><button type="button">Cadastre-se</button>
+                <a href="./Codigo/cadastro.html"><button type="button">Cadastre-se</button>
                 </a>
             </div>
         </div>
