--- a/Codigo/cadastro.html
+++ b/Codigo/cadastro.html
@@ -21,10 +21,6 @@
         <div class="card-group">
             <h3 class=" Title ">Cadastre-se</h3>
         </div>
-        <div class="social-media">
-            <a href="https://accounts.google.com/signin/v2/identifier?hl=pt-br&flowName=GlifWebSignIn&flowEntry=ServiceLogin "><i class="fab fa-facebook"></i></a>
-            <a href="#"><i class="fab fa-google-plus"></i></a>
-        </div>
         <div class="card-group">
             <input class="input-login" type="text" placeholder="Nome" required>
         </div>
@@ -41,7 +37,7 @@
             <input class="input-login" type="text" placeholder="Frequência de medições" required>
         </div>
         <div class="card-group ">
-            <input class="input-login" type="number" placeholder="Idade" required>
+            <input class="input-login" type="date" placeholder="Data de nascimento" required>
         </div>
         <div class="card--group"><label><input type="checkbox">Manter conectado</label></div>
         <div class="card-group button">
