--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <label> <input type="checkbox" name="lembrar">Manter conectado</label>
             </div>
             <div class="card-group button">
-                <a href="main.html"><button onclick="validate()" class="btn_acessar" type="submit" >Acessar</button></a>
+                <a href="./Codigo/main.html"><button onclick="validate()" class="btn_acessar" type="submit" >Acessar</button></a>
             </div>
             <div class="card-group button">
                 <label>Novo usuário: </label>
