--- a/Codigo/main.html
+++ b/Codigo/main.html
@@ -30,23 +30,17 @@
                     <a href="main.html">
                         <li>Medições</li>
                     </a>
-                    <a href="calendario.html">
-                        <li>Calendário</li>
-                    </a>
                     <a href="news.html">
                         <li>Links úteis</li>
-                    </a>
-                    <a href="notificacoes.html">
-                        <li>Notificações</li>
                     </a>
                 </ul>
                 <hr>
                 <ul>
-                    <a href="configuracoes.html">
-                        <li>Configurações</li>
-                    </a>
                     <a href="avalie.html">
                         <li>Avalie a gente</li>
+                    </a>
+                    <a href="conheca.html">
+                        <li>Conheça a gente</li>
                     </a>
                 </ul>
             </div>
@@ -82,6 +76,10 @@
             </div>
         </div>
     </section>
+
+    <footer>
+        <p class="text-footer">Copyright Glicetec - Todos os direitos reservados</p>
+    </footer>
 
     <script src="js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
