--- a/Codigo/main.html
+++ b/Codigo/main.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/style-medicao.css">
-    <title>Glicetec</title>
+    <title>Medições</title>
 </head>
 
 <body onload="show()">
@@ -20,7 +20,7 @@
             <div class="bg-navbar p-4">
                 <div class="header-navbar">
                     <i class="fas fa-user-md logo-navbar"></i>
-                    <h2 class="text-white">Glicetec</h2>
+                    <h3 class="text-white">Glicetec</h3>
                 </div>
                 <hr>
                 <ul>
@@ -81,7 +81,7 @@
         <p class="text-footer">Copyright Glicetec - Todos os direitos reservados</p>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="./js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </body>
 
