--- a/Codigo/perfil.html
+++ b/Codigo/perfil.html
@@ -19,7 +19,7 @@
             <div class="bg-navbar p-4">
                 <div class="header-navbar">
                     <i class="fas fa-user-md logo-navbar"></i>
-                    <h2 class="text-white">Glicetec</h2>
+                    <h3 class="text-white">Glicetec</h3>
                 </div>
                 <hr>
                 <ul>
@@ -29,23 +29,17 @@
                     <a href="main.html">
                         <li>Medições</li>
                     </a>
-                    <a href="calendario.html">
-                        <li>Calendário</li>
-                    </a>
                     <a href="news.html">
                         <li>Links úteis</li>
-                    </a>
-                    <a href="notificacoes.html">
-                        <li>Notificações</li>
                     </a>
                 </ul>
                 <hr>
                 <ul>
-                    <a href="configuracoes.html">
-                        <li>Configurações</li>
-                    </a>
                     <a href="avalie.html">
                         <li>Avalie a gente</li>
+                    </a>
+                    <a href="conheca.html">
+                        <li>Conheça a gente</li>
                     </a>
                 </ul>
             </div>
@@ -62,7 +56,6 @@
             </div>
         </nav>
     </header>
-
 
     <div id="perfil" class="container">
         <div class="row">
