--- a/Codigo/main.html
+++ b/Codigo/main.html
@@ -67,7 +67,7 @@
                 <input type="text" required placeholder="         (dl/mg)" id="taskInput" class="task-input" action="/add-task">
                 <input type="datetime-local" required name="datetime" id="datetime" class="datetime-input">
                 <p class="error"></p>
-                <button class="btn_acessar" id="buttonAdd" type="submit">Adicionar</button>
+                <button class="btn_acessar btn-add-glicemia" id="buttonAdd" type="submit">Adicionar</button>
                 <ul class="task-list" id="taskList"></ul>
                 <div class="the-two-buttons">
                     <button class="delete-all">Deletar medição</button>
