--- a/index.html
+++ b/index.html
@@ -13,36 +13,42 @@
     <title>Login</title>
 </head>
 
-<body class="login-page">
-    <form id="login-form" class="form" method="post" onsubmit="loginUser(this)">
-        <div class="card" id="login">
-            <div class="card-top">
-                <h1><strong>GLICETEC</strong></h1>
-                <i class="fas fa-user-md logo"></i>
-                <h2>Seu assistente médico pessoal</h2>
+<body>
+    <section class="login-page">
+        <form id="login-form" class="form" method="post" onsubmit="loginUser(this)">
+            <div class="card" id="login">
+                <div class="card-top">
+                    <h1><strong>GLICETEC</strong></h1>
+                    <i class="fas fa-user-md logo"></i>
+                    <h2>Seu assistente médico pessoal</h2>
+                </div>
+                <div class="card-group">
+                    <input for="username" class="input-login" type="email" name="Usuario" placeholder="E-mail" required>
+                </div>
+                <div class="card-group">
+                    <input for="password" class="input-login" type="password" name="Senha" placeholder="Senha" required>
+                </div>
+                <div class="card-group link-checkbox">
+                    <a class="esqueci" href="esqueci.html">
+                        <p>Esqueci a senha</p>
+                    </a>
+                    <label> <input type="checkbox" name="lembrar">Manter conectado</label>
+                </div>
+                <div class="card-group button">
+                    <a href="./Codigo/main.html"><button onclick="validate()" class="btn_acessar" type="submit" >Acessar</button></a>
+                </div>
+                <div class="card-group button">
+                    <label>Novo usuário: </label>
+                    <a href="./Codigo/cadastro.html"><button type="button">Cadastre-se</button>
+                    </a>
+                </div>
             </div>
-            <div class="card-group">
-                <input for="username" class="input-login" type="email" name="Usuario" placeholder="E-mail" required>
-            </div>
-            <div class="card-group">
-                <input for="password" class="input-login" type="password" name="Senha" placeholder="Senha" required>
-            </div>
-            <div class="card-group link-checkbox">
-                <a class="esqueci" href="esqueci.html">
-                    <p>Esqueci a senha</p>
-                </a>
-                <label> <input type="checkbox" name="lembrar">Manter conectado</label>
-            </div>
-            <div class="card-group button">
-                <a href="./Codigo/main.html"><button onclick="validate()" class="btn_acessar" type="submit" >Acessar</button></a>
-            </div>
-            <div class="card-group button">
-                <label>Novo usuário: </label>
-                <a href="./Codigo/cadastro.html"><button type="button">Cadastre-se</button>
-                </a>
-            </div>
-        </div>
-    </form>
+        </form>
+    </section>
+
+    <footer>
+        <p class="text-footer">Copyright Glicetec - Todos os direitos reservados</p>
+    </footer>
 
     <script src="./Codigo/js/login.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js " integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN " crossorigin="anonymous "></script>
