Finalizando conheca.html e corrigindo news.html

--- a/Codigo/conheca.html
+++ b/Codigo/conheca.html
@@ -63,43 +63,53 @@
 
     <section class="conheca container">
         <div class="card-top-conheca">
-            <h5>Conheça a equipe por trás do GLICETEC</h5>
+            <h4 class="card-top-title"><strong>Conheça a equipe por trás do GLICETEC</strong></h4>
             <i class="fas fa-user-md logo-conheca"></i>
         </div>
 
+        <div class="text-conheca">
+            <p>
+                Essa aplicação web foi desenvolvida para a disciplina de Trabalho Interdisciplinar de Aplicaçoes Web (TIAW) do curso de Enganharia de Software da Pontifícia Universidade Católica de Minas Gerais, Campus Praça da Liberdade. Utilizamos as tecnologias HTML, CSS, Bootstrap, JavaScript e jQuery. 
+                <br><br>
+                O link do repositório do Github com o código completo do GLICETEC é esse <a class="" target="_blank" href="https://github.com/ICEI-PUC-Minas-PPLES-TI/plf-es-2021-1-ti1-7946100-glicemiaglicetec">aqui.</a>
+                <br><br>
+                Veja abaixo nossa equipe de desenvolvimento. As fotos são links para os nossos respectivos Linkedins. Fique à vontade para clicar nas nossas fotinhas e saber um pouco mais sobre a gente.
+            </p>
+        </div>
+
         <div class="container__aluno">
             <a href="https://github.com/raqcalazans" target="_blank">
+                <img class="container__aluno-img" src="https://avatars.githubusercontent.com/u/83794576?v=4" alt="Leonardo Magela">
+            </a>
+            <p class="aluno-name">Leonardo Magela</p>
+        </div>
+
+        <div class="container__aluno">
+            <a href="https://www.linkedin.com/in/leonardo-gorle-almeida-a54146182/" target="_blank">
+                <img class="container__aluno-img" src="https://media-exp3.licdn.com/dms/image/C4D03AQEEw4SXw1BW4A/profile-displayphoto-shrink_200_200/0/1598454965542?e=1631145600&v=beta&t=T1jbMP8F13s5Vf9lqokkrqqcbuPAZDPextSUdaD4xlE" alt="Leonardo Gorle">
+            </a>
+            <p class="aluno-name">Leonardo Gorle</p>
+        </div>
+
+        <div class="container__aluno">
+            <a href="https://www.linkedin.com/in/nicol%C3%A1s-melo-chabot-6608831a2/" target="_blank">
+                <img class="container__aluno-img" src="https://avatars.githubusercontent.com/u/82840508?v=4" alt="Nicolás Chabot">
+            </a>
+            <p class="aluno-name">Nicolás Chabot</p>
+        </div>
+
+        <div class="container__aluno">
+            <a href="https://linkedin.com/in/raqcalazans" target="_blank">
                 <img class="container__aluno-img" src="https://avatars.githubusercontent.com/u/47869356?v=4" alt="Raquel Calazans">
             </a>
             <p class="aluno-name">Raquel Calazans</p>
         </div>
 
         <div class="container__aluno">
-            <a href="https://github.com/raqcalazans" target="_blank">
-                <img class="container__aluno-img" src="https://avatars.githubusercontent.com/u/47869356?v=4" alt="Raquel Calazans">
+            <a href="https://www.linkedin.com/in/vitor-lion-70a84a1a1/" target="_blank">
+                <img class="container__aluno-img" src="https://avatars.githubusercontent.com/u/83796111?v=4" alt="Vito Lion">
             </a>
-            <p class="aluno-name">Raquel Calazans</p>
-        </div>
-
-        <div class="container__aluno">
-            <a href="https://github.com/raqcalazans" target="_blank">
-                <img class="container__aluno-img" src="https://avatars.githubusercontent.com/u/47869356?v=4" alt="Raquel Calazans">
-            </a>
-            <p class="aluno-name">Raquel Calazans</p>
-        </div>
-
-        <div class="container__aluno">
-            <a href="https://github.com/raqcalazans" target="_blank">
-                <img class="container__aluno-img" src="https://avatars.githubusercontent.com/u/47869356?v=4" alt="Raquel Calazans">
-            </a>
-            <p class="aluno-name">Raquel Calazans</p>
-        </div>
-
-        <div class="container__aluno">
-            <a href="https://github.com/raqcalazans" target="_blank">
-                <img class="container__aluno-img" src="https://avatars.githubusercontent.com/u/47869356?v=4" alt="Raquel Calazans">
-            </a>
-            <p class="aluno-name">Raquel Calazans</p>
+            <p class="aluno-name">Vitor Lion</p>
         </div>
     </section>
 
