Update code and delete php

--- a/Codigo/cadastro.html
+++ b/Codigo/cadastro.html
@@ -34,19 +34,21 @@
                 <input for="inputSenha" id="inputSenha" class="input-login" type="password" placeholder="Senha*" required>
             </div>
             <div class="card-group">
-                <input for="inputTipo_Diabetes" id="inputTipo_Diabetes" class="input-login" type="text" placeholder="Tipo de Diabetes*" required>
                 <select name="Tipo de Diabetes" id="tipo-diabetes" class="input-tipo" required>
-                    <option value="default" class="nome-tipo" disabled selected>Tipo de Diabetes</option>
+                    <option value="default" class="nome-tipo" disabled selected>Tipo de Diabetes*</option>
                     <option value="1">Diabete Tipo 1</option>
                     <option value="2">Diabete Tipo 2</option>
+                    <option value="3">Diabete Tipo 3</option>
+                    <option value="4">Diabete Tipo 4 (LADA)</option>
+                    <option value="5">Diabete Tipo 5</option>
+                    <option value="M">Diabete MODY</option>
                     <option value="G">Diabete Gestacional</option>
                     <option value="P">Pré-diabetes</option>
                 </select>
             </div>
             <div class="card-group">
-                <input class="input-login" type="text" placeholder="Frequência de medições*" required>
                 <select name="Tipo de Diabetes" id="frequencia" class="input-tipo" required>
-                    <option value="default" class="nome-tipo" disabled selected>Frequência de medições</option>
+                    <option value="default" class="nome-tipo" disabled selected>Frequência de medições*</option>
                     <option value="6d">6x por dia</option>
                     <option value="5d">5x por dia</option>
                     <option value="4d">4x por dia</option>
