--- a/Codigo/teste.html
+++ b/Codigo/teste.html
@@ -5,8 +5,22 @@
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
 	<script type="text/javascript" src="funcoes.js"></script>
+	<script src="https://kit.fontawesome.com/0924d110a0.js" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+	<i style="margin: 2rem;" class="fas fa-user-md logo"></i>
+	<p>
+
+
+
+
+
+
+
+
+
+	</p>
 	<form id="frmCadastro">
 		<ul>
 			<li>
