--- a/Codigo/conheca.html
+++ b/Codigo/conheca.html
@@ -31,7 +31,7 @@
                         <li>Perfil</li>
                     </a>
                     <a href="main.html">
-                        <li>Medições</li>
+                        <li>Glicemias</li>
                     </a>
                     <a href="news.html">
                         <li>Links úteis</li>
@@ -54,7 +54,7 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
                 <div class="user">
-                    <p class="user-name">Olá</p>
+                    <p class="user-name">Olá, Peter...</p>
                     <i class="fas fa-user-circle"></i>
                 </div>
             </div>
