--- a/Codigo/news.html
+++ b/Codigo/news.html
@@ -52,7 +52,7 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
                 <div class="user">
-                    <p class="user-name">Olá</p>
+                    <p class="user-name">Olá, Peter...</p>
                     <i class="fas fa-user-circle"></i>
                 </div>
             </div>
