--- a/Codigo/conheca.html
+++ b/Codigo/conheca.html
@@ -69,7 +69,7 @@
 
         <div class="text-conheca">
             <p>
-                Essa aplicação web foi desenvolvida para a disciplina de Trabalho Interdisciplinar de Aplicaçoes Web (TIAW) do curso de Enganharia de Software da Pontifícia Universidade Católica de Minas Gerais, Campus Praça da Liberdade. Utilizamos as tecnologias HTML, CSS, Bootstrap, JavaScript e jQuery. 
+                Essa aplicação web foi desenvolvida para a disciplina de Trabalho Interdisciplinar de Aplicaçoes Web (TIAW) do curso de Enganharia de Software da Pontifícia Universidade Católica de Minas Gerais, Campus Praça da Liberdade. Utilizamos as tecnologias HTML, CSS, Bootstrap, JavaScript, jQuery e JSON LocalStorage. 
                 <br><br>
                 O link do repositório do Github com o código completo do GLICETEC é esse <a class="" target="_blank" href="https://github.com/ICEI-PUC-Minas-PPLES-TI/plf-es-2021-1-ti1-7946100-glicemiaglicetec">aqui.</a>
                 <br><br>
